<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_detail_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sample3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_detail_back"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleX="-1"
                    android:src="@drawable/img_detail_arrow_32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/iv_detail_user"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_detail_usericon_48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_detail_seller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="난쉽"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_detail_user"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_detail_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="동래구 온천제2동"
                    android:textColor="@color/동래구온천제2동"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_detail_user"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_seller" />

                <ImageView
                    android:id="@+id/iv_detail_status"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/img_detail_status_32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/hot"
                    android:textColor="@color/고열"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/iv_detail_status"
                    app:layout_constraintEnd_toStartOf="@id/iv_detail_status"
                    app:layout_constraintTop_toTopOf="@id/iv_detail_status" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/manner"
                    android:textColor="@color/이모지아래"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_detail_status" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/칸나눔"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_detail_postname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="샤넬 탑핸들 가방"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="어쩌구 저쩌구 궁시렁 궁시렁 \n어쩌구 저쩌구 avkadwqeweewq \nwqejkoqwrkwjraadisaojd"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iv_detail_like"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/selector_detail_like_24dp" />

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@color/칸나눔"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/tv_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="180000"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/iv_corner_radius"
            android:backgroundTint="@color/버튼색"
            android:padding="5dp"
            android:text="@string/detail_chat"
            android:textColor="@color/white"
            android:textSize="24sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/iv_corner_radius"
                android:text="@string/detail_chat"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>